Fixes a small error error in the spacing of the header in hero.scss.

--- a/_sass/hero.scss
+++ b/_sass/hero.scss
@@ -29,7 +29,7 @@
     font-size: 1em;
     font-weight: bold;
     line-height: 1.2;
-    margin: 60px 0 40px;
+    margin: 60px 0 0px;
 
     @media screen and (max-width: $medium-break-point) {
       font-size: 0.6em;
